Body overflow fix

--- a/ui/src/css/screen.css
+++ b/ui/src/css/screen.css
@@ -72,6 +72,7 @@ body {
     left: 0;
     padding: 0;
     background: #30373a;
+    overflow-x: hidden;
 }
 
 .global-nav--open {
